# opendeck

./: LICENSE  package.json
backend/: Cargo.toml
backend/src/: main.rs  objs.rs
src/: app.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  main.rs
